--- a/moderation/package.json
+++ b/moderation/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "query",
+  "name": "modaration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^1.0.1",
-    "express": "^4.18.2"
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
   }
 }
