--- a/query/package.json
+++ b/query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posts",
+  "name": "query",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "cors": "^1.0.1",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
   }
 }
